--- a/templates/resume_1.html
+++ b/templates/resume_1.html
@@ -64,7 +64,7 @@
                                 <img src="../static/img/resume_1/location.png" width="30px"><span style="padding: 12px;font-weight: 600" id="ulocation">Surat, Gujarat</span>
                             </div>
                             <div class="col-md-8" style="float: left;">
-                                <img src="../static/img/resume_1/email.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uemail">wendy@gmail.com</span>
+                                <img src="../static/img/resume_1/email.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uemail">bajajyash428@gmail.com</span>
                             </div>
                             </div>
                         </div>
