--- a/templates/resume_1.html
+++ b/templates/resume_1.html
@@ -53,18 +53,18 @@
                         <div class="col-md-12" style="margin-top: 25px">
                             <div style="margin-bottom: 50px">
                             <div class="col-md-4" style="float: left;">
-                                <img src="../static/img/resume_1/birthday.png" width="30px"><span style="padding: 12px;font-weight: 600" id="udob">May 07, 1998</span>
+                                <img src="../static/img/resume_1/birthday.png" width="30px"><span style="padding: 12px;font-weight: 600" id="udob">May 16, 1997</span>
                             </div>
                             <div class="col-md-8" style="float: left;">
-                                <img src="../static/img/resume_1/phone.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uphnum">+91 9726 576 370</span>
+                                <img src="../static/img/resume_1/phone.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uphnum">+33698452324</span>
                             </div>
                         </div>
                             <div>
                             <div class="col-md-4" style="float: left;">
-                                <img src="../static/img/resume_1/location.png" width="30px"><span style="padding: 12px;font-weight: 600" id="ulocation">Surat, Gujarat</span>
+                                <img src="../static/img/resume_1/location.png" width="30px"><span style="padding: 12px;font-weight: 600" id="ulocation">Elcout, Yvelines</span>
                             </div>
                             <div class="col-md-8" style="float: left;">
-                                <img src="../static/img/resume_1/email.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uemail">bajajyash428@gmail.com</span>
+                                <img src="../static/img/resume_1/email.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uemail">wendy8@gmail.com</span>
                             </div>
                             </div>
                         </div>
