--- a/templates/resume_1.html
+++ b/templates/resume_1.html
@@ -61,7 +61,7 @@
                         </div>
                             <div>
                             <div class="col-md-4" style="float: left;">
-                                <img src="../static/img/resume_1/location.png" width="30px"><span style="padding: 12px;font-weight: 600" id="ulocation">Elcout, Yvelines</span>
+                                <img src="../static/img/resume_1/location.png" width="30px"><span style="padding: 12px;font-weight: 600" id="ulocation">Elcout, Yves Lines</span>
                             </div>
                             <div class="col-md-8" style="float: left;">
                                 <img src="../static/img/resume_1/email.png" width="30px"><span style="padding: 12px;font-weight: 600" id="uemail">wendy8@gmail.com</span>
