--- a/templates/read_data.html
+++ b/templates/read_data.html
@@ -9,8 +9,8 @@
         <tr>
             <th>ID</th>
             <th>Création</th>
-            <th>Nom</th>
-            <th>Prénom</th>
+            <th>Email</th>
+            <th>Message</th>
         </tr>
         {% for row in data %}
         <tr>
